[tool.poetry]
name = "build-stats"
version = "0.1.0"
description = "Aggregates build statistics from Jenkins."
authors = ["Karsten Jeschkies <k@jeschkies.xyz>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
matplotlib = "^3.0"
aiohttp = "^3.5"
pandas = "^0.24.2"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
